2025-03-06T01:04:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13688838944 # 585
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-06
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 470 863 / 484 877
* notice: next accum: outdated-unq outdated-all / unq all: 471 864 / 485 878
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-20] / [2025-03-05]

2025-03-05T01:04:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13666175503 # 584
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-05
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 469 862 / 483 876
* notice: next accum: outdated-unq outdated-all / unq all: 470 863 / 484 877
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-19] / [2025-03-04]

2025-03-04T01:04:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13643885302 # 583
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 468 861 / 482 875
* notice: next accum: outdated-unq outdated-all / unq all: 469 862 / 483 876
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-18] / [2025-03-03]

2025-03-03T01:05:40Z: