@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-06T01:04:20Z",
-  "count_outdated" : 864,
-  "uniques_outdated" : 471,
-  "count" : 878,
-  "uniques" : 485,
+  "timestamp" : "2025-03-07T01:05:02Z",
+  "count_outdated" : 865,
+  "uniques_outdated" : 472,
+  "count" : 879,
+  "uniques" : 486,
   "clones" : [
-    {
-      "timestamp": "2025-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-23T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
