@@ -1,3 +1,12 @@
+2025-03-07T01:05:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711469223 # 586
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 471 864 / 485 878
+* notice: next accum: outdated-unq outdated-all / unq all: 472 865 / 486 879
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-21] / [2025-03-06]
+
 2025-03-06T01:04:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13688838944 # 585
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-06
